--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,16 +10,18 @@
     {
       "src": "logo192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#303d47"
+  "theme_color": "#FFFFFF",
+  "background_color": "#000000"
 }
